# python-package-template

./: .git-cliff.toml  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  README.md  copier.yml  justfile  mkdocs.yml  noxfile.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: changelog.yml  release.yml  tests.yml
docs/: contributing.md  index.md  reference.md
docs/pages/: contributing.md  quickstart.md  reference.md
template/: .copier-answers.yml.jinja  .git-cliff.toml.jinja  .gitignore.jinja  .pre-commit-config.yaml.jinja  .readthedocs.yml.jinja  README.md.jinja  justfile.jinja  mkdocs.yml.jinja  noxfile.py.jinja  pyproject.toml.jinja
template/.github/: PULL_REQUEST_TEMPLATE.md.jinja
template/.github/ISSUE_TEMPLATE/: feature_request.yml.jinja
template/.github/workflows/: changelog.yml.jinja  pr-title.yml.jinja  publish-release.yml.jinja  release.yml.jinja  tests.yml.jinja
template/.github/{% if include_actions %}workflows{% endif %}/: changelog.yml.jinja  nightly.yml.jinja  pr-title.yml.jinja  publish-release.yml.jinja  tests.yml.jinja
template/docs/: contributing.md.jinja  examples.md.jinja  hooks.py.jinja  index.md.jinja  {% if include_examples %}examples.md{% endif %}.jinja
template/docs/pages/: api-reference.md.jinja  contributing.md.jinja  getting-started.md.jinja  {% if include_examples %}examples.md{% endif %}.jinja
template/examples/: hello.py.jinja
template/scripts/: copy_markdown_docs.py
template/src/{{ package_name }}/: __init__.py.jinja  hello.py.jinja
template/tests/: test_examples.py.jinja  test_hello.py.jinja
template/{% if include_examples %}examples{% endif %}/: hello.py.jinja
tests/: conftest.py  test_docs_content.py  test_github_workflows.py  test_hooks.py  test_option_combinations.py  test_option_values.py  test_template.py  test_template_options.py  test_version_validation.py
